--- a/02led_button/Makefile
+++ b/02led_button/Makefile
@@ -1,11 +1,11 @@
-obj-m += dev_nr.o
-RESULT = major_num_example
+obj-m += gpio_driver.o
+RESULT = led_button_example
 SRC = $(RESULT).c
 
 all:
-	make -C /home/embedded2022/working/kernel M=$(PWD) modules
+	make -C ~/working/kernel M=$(PWD) modules
 	aarch64-linux-gnu-gcc -o $(RESULT) $(SRC)
 
 clean:
-	make -C $(HOME)/working/kernel M=$(PWD) clean
+	make -C ~/working/kernel M=$(PWD) clean
 	rm -f $(RESULT)
